--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">RemoteJobApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="msg">Are you sure wants to delete this activity?</string>
+    <string name="del">Delete Activity</string>
+    <string name="ok">Yes</string>
+    <string name="no">NO</string>
 </resources>
